<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/NewsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Red"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView00"
            android:layout_width="match_parent"
            android:layout_height="@dimen/listheight"
            android:gravity="center"
            android:text="@string/topstories"
            android:textColor="@color/White"
            android:textSize="@dimen/textsize" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="match_parent"
            android:layout_height="@dimen/listheight"
            android:gravity="center"
            android:text="@string/world"
            android:textColor="@color/White"
            android:textSize="@dimen/textsize" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="match_parent"
            android:layout_height="@dimen/listheight"
            android:gravity="center"
            android:text="@string/uk"
            android:textColor="@color/White"
            android:textSize="@dimen/textsize" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="match_parent"
            android:layout_height="@dimen/listheight"
            android:gravity="center"
            android:text="@string/business"
            android:textColor="@color/White"
            android:textSize="@dimen/textsize" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="match_parent"
            android:layout_height="@dimen/listheight"
            android:gravity="center"
            android:text="@string/politics"
            android:textColor="@color/White"
            android:textSize="@dimen/textsize" />

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="match_parent"
            android:layout_height="@dimen/listheight"
            android:gravity="center"
            android:text="@string/healths"
            android:textColor="@color/White"
            android:textSize="@dimen/textsize" />

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="match_parent"
            android:layout_height="@dimen/listheight"
            android:gravity="center"
            android:text="@string/edu"
            android:textColor="@color/White"
            android:textSize="@dimen/textsize" />

        <TextView
            android:id="@+id/TextView07"
            android:layout_width="match_parent"
            android:layout_height="@dimen/listheight"
            android:gravity="center"
            android:text="@string/science"
            android:textColor="@color/White"
            android:textSize="@dimen/textsize" />

        <TextView
            android:id="@+id/TextView08"
            android:layout_width="match_parent"
            android:layout_height="@dimen/listheight"
            android:gravity="center"
            android:text="@string/tech"
            android:textColor="@color/White"
            android:textSize="@dimen/textsize" />

        <TextView
            android:id="@+id/TextView09"
            android:layout_width="match_parent"
            android:layout_height="@dimen/listheight"
            android:gravity="center"
            android:text="@string/entertainment"
            android:textColor="@color/White"
            android:textSize="@dimen/textsize" />

    </LinearLayout>

</ScrollView>
